chore: add project links to README and update Cargo.toml
Added Rust docs and Crates.io links to the README file for more detailed accessibility. Also, the Cargo.toml file is now updated with descriptions, repository link, readme link, categories, and keywords to provide a better project representation and improve package discovery.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "bge"
+description = "Rust interface for BGE Small English Embedding Library"
 version = "0.1.0"
 edition = "2021"
-license = "MIT"
-license-file = "LICENSE.txt"
+license-file = "LICENSE"
+repository = "https://github.com/pekc83/bge"
+readme = "README.md"
+categories = ["text-processing"]
+keywords = ["sentence-similarity", "text-embedding", "bert", "transformers"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
